Extend audio options.